# UCR-SUITE

./: .gitignore  CMakeLists.txt  LICENSE  README.md
include/: UCR_kNNDTW.h  bounds.h  circular_array.h  distances.h  parameters.h  query.h  sequence.h  thread_pool.h  utils.h
src/: UCRDTW_kNN.cpp  UCRDTW_kNN_backup.cpp  UCRDTW_kNN_serial.cpp  UCRDTW_memory_parallel.cpp  UCR_kNNDTW.cpp  sequence.cpp
